--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ footer_text: >
 keywords: turbulence, sciML, machine learning, deep learning, physics, phd
 # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 🌊 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: web_icon # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://andremfreitas.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/. Leave blank for root
@@ -122,8 +122,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Blog / Thoughts # blog_name will be displayed in your blog page
+blog_description: might write something here sometime
 permalink: /blog/:year/:title/
 
 # Pagination
