--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ footer_text: >
 keywords: turbulence, sciML, machine learning, deep learning, physics, phd
 # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: "/assets/img/web_icon.png" # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: web_icon.jpg # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://andremfreitas.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/. Leave blank for root
