--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,72 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Andre Freitas
     - name: Date of Birth
-      value: 14th March 1879
+      value: 13th July 2000
     - name: Languages
-      value: English, German
+      value: English, Portuguese
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: University of Rome "Tor Vergata", Italy & Institut Polythecnic Paris, France
+      year: 2023 - 
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Large eddy simulations in a deep learning loop for turbulent flows.
+    - title: MSc
+      institution: TU Delft, the Netherlands
+      year: 2023
       description:
-        - Description 1.
-        - Description 2.
+        - Thesis: Numerical Simulation of Turbulence Induced Vibrations using an Anisotropic Pressure Fluctuations Model
 
-- title: Experience
+- title: Work Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Researcher (intern)
+      institution: Nuclear Research & consultancy Group (NRG), Petten, the Netherlands
+      year: 2022 - 2023
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Conducted my MSc thesis in collaboration with TU Delft.
+    - title: Aerodynamics Engineer (intern)
+      institution: PLANA, Suwon, South Korea
+      year: 2022
       description:
-        - Description 1.
-        - Description 2.
+        - CFD unsteady analysis of the tilt‑rotor transition phase
+        - Setup framework for propeller blade optimisation
+        - High-lift system design
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
+- title: Student Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: Aerodynamics Engineer
+      institution: Formula Student Delft, the Netherlands
+      year: 2021 - 2022
+      description:
+        - CFD analysis of the car with focus on the rear wing and diffuser.
 
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
+    - title: Lead Aerodynamics
+      institution: TLMoto, Lisbon, Portugal
+      year: 2020 - 2021
+      description:
+        - Responsible for managing the department of Aerodynamics and Cooling and make sure deadlines are met.
+
+
 
 - title: Academic Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: DL
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - SciML
+        - Generative models
+    - title: Fluid dynamics
       items:
-        - Description 1.
-        - Description 2.
+        - Turbulence
+        - LES
 
 - title: Other Interests
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Football, Climbing, sports in general ... 
