--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -18,7 +18,7 @@
         - Large eddy simulations in a deep learning loop for turbulent flows.
     - title: MSc
       institution: TU Delft, the Netherlands
-      year: 2023
+      year: 2021 - 2023
       description:
         - Thesis - Numerical Simulation of Turbulence Induced Vibrations using an Anisotropic Pressure Fluctuations Model
 
