--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name: #M.
 last_name: Freitas
 email: andre.marreiros.freitas@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Andre Freitas' personal website.
+  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 # footer_text: >
 #   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
 keywords: turbulence, sciML, machine learning, deep learning, physics, phd
